--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021"
@@ -28,8 +29,8 @@
     "eslint-config-next": "15.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
