--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
+    "test:ci": "jest --config ./jest.config.ts --ci --reporters=default --reporters=jest-junit",
     "cypress": "cypress open"
   },
   "dependencies": {
@@ -30,6 +31,7 @@
     "eslint-config-next": "15.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "ts-node": "^10.9.2",
